...
      builder: (BuildContext dialogContext) {
        return AlertDialog(
          shape: RoundedRectangleBorder(
            borderRadius: BorderRadius.circular(16),
          ),
          title: Text(
            'Keluar Akun',
            style: _jakarta(
              fontSize: 16,
              fontWeight: FontWeight.bold,
              color: Colors.black,
            ),
          ),
          content: Text(
            'Apakah Anda yakin ingin keluar dari akun EcoPoint?',
            style: _jakarta(fontSize: 14, color: Colors.black87),
          ),
          actions: [
            TextButton(
              onPressed: () => Navigator.pop(dialogContext),
              child: Text(
...
                      behavior: SnackBarBehavior.floating,
                    ),
                  );
                }
              },
              child: Text(
                'Keluar',
                style: _jakarta(
                  fontSize: 14,
                  fontWeight: FontWeight.bold,
                  color: const Color(0xFFBA2525),
                ),
              ),
...
            alignment: Alignment.center,
            decoration: BoxDecoration(
              color: const Color(0xFFBA2525),
              borderRadius: BorderRadius.circular(12),
            ),
            child: Text(
              'Keluar dari akun',
              style: _jakarta(
                fontSize: 15,
                fontWeight: FontWeight.bold,
                color: Colors.white,
              ),
            ),
...
